crates/test-files/fixtures/compile_errors/ctx_missing_create.fe
use std::context::Context

contract Foo {
    pub fn bar() {}
}

contract Bar {
    pub fn create_foo(ctx: Context) {
        Foo.create(0)
    }
    pub fn create_foo2(ctx: Context) {
      Foo.create(ctx, 0)
    }
}
